링크 문법 오류 수정

--- a/content/posts/2020-reflection.mdx
+++ b/content/posts/2020-reflection.mdx
@@ -61,7 +61,7 @@ thumbnail: /images/2020/11/thumb_default.jpg
 
 # 작년 계획, 잘 지켰을까?
 
-[2019 회고 + 2020 다짐 (feat. 글또) ➔]("https://feel5ny.github.io/2019/12/22/Joylog_004/")
+[2019 회고 + 2020 다짐 (feat. 글또) ➔](https://feel5ny.github.io/2019/12/22/Joylog_004/)
 
 작년 글을 보면, 웹 프론트엔드 개발자로써, 실력향상을 위해서 잡아두었던 계획들이 있었다. 구체적인
 일정이나 어떤 방법으로 공부할지는 작성하진 않았었고, 우선순위, 중요도 정도로 작성해두었는데, 결론은
@@ -92,7 +92,7 @@ thumbnail: /images/2020/11/thumb_default.jpg
 - 둘다 달성하지 못했다.😞
 - **디자인 패턴**의 경우 최근에 공부할 의지가 생겨서, 사내에서든 외부에서든 책모임 스터디를
   오픈하려고 준비하는 중이다. 다만, 저번에 진행했던
-  [HTTP 완벽가이드 책모임]("https://github.com/bookcrush/httpPerfectGuide")과 같이 이론만 개인적으로
+  [HTTP 완벽가이드 책모임](https://github.com/bookcrush/httpPerfectGuide)과 같이 이론만 개인적으로
   공부하고 정리하는 스타일로는 어려울 듯 하여, 실습위주로 같이 스터디하되, 어떤 멤버로, 어떤
   방법으로 진행하는 것이 제일 적합한지를 고민중이다. 현재 사내에서도 실습이 조금 가미된 개발스터디를
   진행하고 있는데, 이참에 실습이 포함된 스터디는 어떻게 진행하면 좋을지 고민해 보려고 한다.
