--- a/content/posts/Communication_003.mdx
+++ b/content/posts/Communication_003.mdx
@@ -341,7 +341,7 @@ thumbnail: /images/2020/09/thumb_default.jpg
 
 ---
 
-- [빅데이터를 활용한 예측마케팅 전략]("http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&mallGb=KOR&barcode=9791195327799&orderClick=LEA&Kc=")
+- [빅데이터를 활용한 예측마케팅 전략](http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&mallGb=KOR&barcode=9791195327799&orderClick=LEA&Kc=)
   책을 보고 이해한 내용을 정리 한 글입니다.
 
 ---
