--- a/content/posts/HTTP_006.mdx
+++ b/content/posts/HTTP_006.mdx
@@ -495,7 +495,7 @@ Allow: GET, HEAD, PUT
 
 ---
 
-- [HTTP 완벽가이드]("http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&mallGb=KOR&barcode=9788966261208&orderClick=LAG&Kc=")
+- [HTTP 완벽가이드](http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&mallGb=KOR&barcode=9788966261208&orderClick=LAG&Kc=)
   책을 보고 이해한 내용을 정리 한 글입니다.
 
 ---
