--- a/content/posts/HTTP_018.mdx
+++ b/content/posts/HTTP_018.mdx
@@ -327,7 +327,7 @@ IP주소가 된다. - 마스터 원 서버는 복제 원 서버에 콘텐츠를 
 
 ---
 
-- [HTTP 완벽가이드]("http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&mallGb=KOR&barcode=9788966261208&orderClick=LAG&Kc=")
+- [HTTP 완벽가이드](http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&mallGb=KOR&barcode=9788966261208&orderClick=LAG&Kc=)
   책을 보고 이해한 내용을 정리 한 글입니다.
 
 ---
