--- a/content/posts/HTTP_003_03.mdx
+++ b/content/posts/HTTP_003_03.mdx
@@ -550,7 +550,7 @@ Connection: Upgrade
 
 - [책뽀개기 모임](https://github.com/bookcrush?type=source) 중 **http 완벽가이드** 1장 뽀개기
   진행중입니다. (~8월말) (다음 모임은 2장) (모임 참여를 원하신다면 댓글로 문의 바랍니다.)
-- [HTTP 완벽가이드]("http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&mallGb=KOR&barcode=9788966261208&orderClick=LAG&Kc=")
+- [HTTP 완벽가이드](http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&mallGb=KOR&barcode=9788966261208&orderClick=LAG&Kc=)
   책을 보고 이해한 내용을 **저만의 순서**로 정리 한 글입니다.
 
 ---
