--- a/content/posts/2020-reflection.mdx
+++ b/content/posts/2020-reflection.mdx
@@ -68,7 +68,10 @@ thumbnail: /images/2020/11/thumb_default.jpg
 ㅎㅎ 하나도 못했다.. 대신 다른 관심있는 분야 위주로 공부를 하긴했는데, 잡아두었던 방향과는..
 유사한부분도 있고, 아닌 부분도 있다.
 
-<img src="/images/2020/11/01.png" alt="작년에 다짐했던 개인공부 계획" />
+<figure>
+  <img src="/images/2020/11/01.png" alt="작년에 다짐했던 개인공부 계획" />
+  <figcaption>작년에 다짐했던 개인공부 계획</figcaption>
+</figure>
 
 ## 1.1. 개인공부 🧐
 
@@ -108,7 +111,10 @@ thumbnail: /images/2020/11/thumb_default.jpg
 
 ## 1.2. 2020 다짐
 
-<img src="/images/2019/46/07.jpg" alt="2019 하반기에 잡은, 2020 다짐" />
+<figure>
+  <img src="/images/2019/46/07.jpg" alt="2019 하반기에 잡은, 2020 다짐" />
+  <figcaption>2019 하반기에 잡은, 2020 다짐</figcaption>
+</figure>
 
 1. 🦠 **내공 다지기** : 코로나 때문에도 그랬지만, 오프라인 활동은 못했다. 다만, 발표도 책모임등의
    외부할동은 진행했던 듯 하다. 내실을 다지는 작업도 놓지지 않았던 듯하다.
@@ -137,7 +143,10 @@ thumbnail: /images/2020/11/thumb_default.jpg
 일이다보니, 혼란이 왔지만(내가 이런 고민을?), **결론적으로는 팀을 위한 고민이다 생각을 하니, 같은
 업무 레벨로 봐야겠다는 생각이 들었다.**
 
-<img src="/images/2020/11/02.jpeg" alt="피플웨어 중" />
+<figure>
+  <img src="/images/2020/11/02.jpeg" alt="피플웨어 중" />
+  <figcaption>피플웨어 중</figcaption>
+</figure>
 
 이 고민의 해결에는 **책이 정말 많이 도움**이 되었다. 그 중에 꼽자면, **피플웨어**라는 책과 **함께
 자라기**라는 책이 있는데, 함께 자라기는 입사하고 완전 주니어시절에 읽었지만, 올해 다시 읽어보면서
@@ -145,7 +154,10 @@ thumbnail: /images/2020/11/thumb_default.jpg
 함께 일하는 **비개발직군들도 꼭!! 읽어야하는 필수책**이라고 생각한다. **지식노동자인 개발자와
 건강하게 함께 일할 수 있는 노하우**가 담겨져 있는 책이라고 생각한다.
 
-<img src="/images/2020/11/03.png" alt="사내 테크톡때 발표했던 '함께 자라기'" />
+<figure>
+  <img src="/images/2020/11/03.png" alt="사내 테크톡때 발표했던 '함께 자라기'" />
+  <figcaption>사내 테크톡때 발표했던 '함께 자라기'</figcaption>
+</figure>
 
 ## 함께 잘 일할 수 있는 문화
 
@@ -168,21 +180,30 @@ thumbnail: /images/2020/11/thumb_default.jpg
 (마지막에는 살짝 흐지부지 됐지만) 마친 후, 책을 보는 것에 대한 두려움이 예전보다 많이 감소했다.
 특히나 이 책이 400쪽 가까이 되는 두꺼운 책이어서 더더욱 그랬던 듯 하다.
 
-<img src="/images/2020/11/05.png" alt="다양한 분야에 관심이 많아졌" />
+<figure>
+  <img src="/images/2020/11/05.png" alt="다양한 분야에 관심이 많아졌" />
+  <figcaption>다양한 분야에 관심이 많아졌</figcaption>
+</figure>
 
 그리고 올해는 6월부터 PO 책모임인 프만사(프러덕트 만드는 사람들)라는 책모임에 참여하면서 습관
 붙이기에 더 불이 붙었던 듯 하다. 물론 이 모임도 중간에 정신없는 상황때문에 참여가 더디긴했지만, 책을
 읽고 모임때는 모임장이 발제한 질문에 서로 얘기하는 분위기가 책에 대한 거부감을 줄여주었던 것도
 있었다. 특히나 모임장인 민지님의 독서 열정을 보고 있으면, 더더욱 큰 효과가..
 
-<img src="/images/2020/11/04.png" alt="나영쓰 책목록" />
+<figure>
+  <img src="/images/2020/11/04.png" alt="나영쓰 책목록" />
+  <figcaption>나영쓰 책목록</figcaption>
+</figure>
 
 외부 책모임에서 얻은 좋은 경험을 사내에도 전파하고 싶어서, 여러가지 책모임들을 스멀스멀
 진행해보았었다. 제일 재밌었던 책은 "빅데이터를 통한 예측마케팅"이라는 책과 "손에 잡히는 10분
 정규표현식"이였는데, 책을 읽고 책모임 인원들이 회사의 업무에 바로 적용하던 모습이 인상깊어서 그랬던
 거 같기도 하다.
 
-<img src="/images/2020/11/06.png" alt="나영쓰 책목록" />
+<figure>
+  <img src="/images/2020/11/06.png" alt="나영쓰 책목록" />
+  <figcaption>나영쓰 책목록</figcaption>
+</figure>
 
 
 
