--- a/content/posts/Communication_002.mdx
+++ b/content/posts/Communication_002.mdx
@@ -53,7 +53,10 @@ thumbnail: /images/2020/08/thumb_default.jpg
 
 ## TL;DR
 
-<img src="/images/2020/08/tldr.jpg" alt="요약 이미지" />
+<figure>
+  <img src="/images/2020/08/tldr.jpg" alt="요약 이미지" />
+  <figcaption>요약 이미지</figcaption>
+</figure>
 
 예측마케팅은 예측분석을 사용하여서 고객접점마다 고객과 더 관련성 있고, 의미 있는 고객경험을
 제공하고, 이를 통해 고객 충성도와 수익을 향상시킬 수 있다. 고객들도 개인화 접근방식을 원하며,
@@ -66,7 +69,10 @@ thumbnail: /images/2020/08/thumb_default.jpg
 
 ## 1. 예측 마케팅에 대하여
 
-<img src="/images/2020/08/01.jpg" alt="고객 충성도와 수익을 향상!" />
+<figure>
+  <img src="/images/2020/08/01.jpg" alt="고객 충성도와 수익을 향상!" />
+  <figcaption>고객 충성도와 수익을 향상!</figcaption>
+</figure>
 
 - 예측마케팅은 **예측분석**을 사용하여, 고객생애주기 전반에 걸쳐 모든 **고객접점**에서 **고객과 더
   관련성 있고, 의미 있는 고객경험을 제공**하고 이를 통해 **고객 충성도**와 **수익**을 향상시킬
@@ -91,7 +97,10 @@ thumbnail: /images/2020/08/thumb_default.jpg
   - **지갑점유율 (share of wallet)** : 한 소비자의 전체 지출 중에서 **특정 제품에 대한 지출이
     차지하는 비중**을 말한다.
 
-    <img src="/images/2020/08/share_of_wallet.png" alt="지갑점유율(출처: 오픈서베이)" />
+<figure>
+  <img src="/images/2020/08/share_of_wallet.png" alt="지갑점유율(출처: 오픈서베이)" />
+  <figcaption>지갑점유율(출처: 오픈서베이)</figcaption>
+</figure>
 - 더 타게팅된 고객 의사소통이 이루어지며, 도달 범위가 아니라 **고객관련성 relevance**이 핵심 지표가
   된다.
 - 고객에게 제공하는 경험을 더 많이 개인화할수록 고객은 **브랜드 충성도를 유지**하게 된다.
