--- a/content/posts/Communication_004.mdx
+++ b/content/posts/Communication_004.mdx
@@ -169,7 +169,10 @@ thumbnail: /images/2020/10/thumb_default.jpg
     뻔질나게 전화를 건다. 이 고객은 높은가치의 고객처럼 보이지만, 사실은 수익성이 낮은 고객이다.
 - 수집한 모든 정보를 통합하고, 연결하고, 중복을 제거할 수 있어야 한다.
 
-<img src="/images/2020/10/prepare.jpeg" alt="데이터 정비 프로세스" />
+<figure>
+  <img src="/images/2020/10/prepare.jpeg" alt="데이터 정비 프로세스" />
+  <figcaption>데이터 정비 프로세스</figcaption>
+</figure>
 
 
 
