--- a/content/posts/docker_01.mdx
+++ b/content/posts/docker_01.mdx
@@ -68,7 +68,10 @@ thumbnail: /images/2022/01/thumb_default.jpg
   소프트웨어
 - 각 가상머신에는 우분투 Ubuntu, CentOS 등의 운영체제가 설치되어 사용된다.
 
-<img src="/images/2022/01/01.png" alt="hypervisor"/>
+<figure>
+  <img src="/images/2022/01/01.png" alt="hypervisor" />
+  <figcaption>hypervisor</figcaption>
+</figure>
         
 > 참고
 [[네이버클라우드 기술&경험] 가상화 개념 이해하기#1, QEMU vs KVM](https://medium.com/naver-cloud-platform/%EB%84%A4%EC%9D%B4%EB%B2%84%ED%81%B4%EB%9D%BC%EC%9A%B0%EB%93%9C-%EA%B8%B0%EC%88%A0-%EA%B2%BD%ED%97%98-%EA%B0%80%EC%83%81%ED%99%94-%EA%B0%9C%EB%85%90-%EC%9D%B4%ED%95%B4%ED%95%98%EA%B8%B0-1-qemu-vs-kvm-962113641799)
@@ -91,7 +94,10 @@ thumbnail: /images/2022/01/thumb_default.jpg
 - 단점 👎: 일반 호스트에 비해 성능 손실 / 가상머신을 배포하기 위한 이미지로 만들었을때, 이미지 크기
   또한, 커진다.
 
-<img src="/images/2022/01/02.png" alt="VM vs Docker" />
+<figure>
+  <img src="/images/2022/01/02.png" alt="VM vs Docker" />
+  <figcaption>VM vs Docker</figcaption>
+</figure>
 
 ## 도커 컨테이너 특징
 
