--- a/content/posts/mentoring-01.mdx
+++ b/content/posts/mentoring-01.mdx
@@ -92,7 +92,10 @@ thumbnail: /images/2025/03/thumb_default.jpg
 경험이 많은 사람이 멀리서 바라보면 그들이 어떤 방향성으로 고민하는 것인지 '어느 정도' 보인다. 마치
 게임에서 맵이 많이 보이는 유저와 아직 맵이 많이 보이지 않는 유저의 차이랄까.
 
-<img src="/images/2025/03/01.png" alt="우선 자원(지식)부터 쌓자!" />
+<figure>
+  <img src="/images/2025/03/01.png" alt="우선 자원(지식)부터 쌓자!" />
+  <figcaption>우선 자원(지식)부터 쌓자!</figcaption>
+</figure>
 
 그렇다고 내가 걸어온 길이 절대 답은 아니기에, 그 고민에서 헤어나오게 돕기 위해서 여러가지 안들을
 제시해주는 것이 나의 역할이라고 생각이 들었다. 또한 마음을 다독여주는 것도 중요한 역할이라고
