--- a/content/posts/reflection-2024.mdx
+++ b/content/posts/reflection-2024.mdx
@@ -55,7 +55,10 @@ thumbnail: /images/2024/02/thumb_default.jpg
 노력했다. 제일 큰 부채 작업을 하지 못했었는데, 출산 이후 회사분들과 만났던 자리에서 물어보니 잘
 해결되었다고 한다. 다행이었다.
 
-<img src="/images/2024/02/01.png" alt="ㅎㅎ" />
+<figure>
+  <img src="/images/2024/02/01.png" alt="ㅎㅎ" />
+  <figcaption>ㅎㅎ</figcaption>
+</figure>
 
 ## 외부활동
 
@@ -70,7 +73,10 @@ thumbnail: /images/2024/02/thumb_default.jpg
 수업 강사님이 개발자도 의사와 같은 태도로 임해야 한다고 말씀하신 적이 있는 데 많이 공감하는
 부분이다. 그만큼 많은 에너지와 시간, 리소스가 필요하고, 함께 일할 개발자들이 많아져야 한다.
 
-<img src="/images/2024/02/02.jpeg" alt="항해99" />
+<figure>
+  <img src="/images/2024/02/02.jpeg" alt="항해99" />
+  <figcaption>항해99</figcaption>
+</figure>
 
 여러 이유로 후배 양성은 항상 중요하다고 생각하며 신입분들을 꾸준히 양성시키는 것이 연차가 쌓인
 개발자들의 역할이라고 생각한다. 현재의 기술적 경험을 명확히 전달하고, 성장을 위해 세심히 케어하는
@@ -89,13 +95,19 @@ thumbnail: /images/2024/02/thumb_default.jpg
 출산 이후 조리원에서 쉬고 있던 차에 링크드인으로 발표 제의를 받았다. 출산한 지 얼마 되지 않아서
 부담스러웠지만 남편의 응원으로 진행하기로 했다.
 
-<img src="/images/2024/02/04.jpg" alt="서울시여성가족재단" />
+<figure>
+  <img src="/images/2024/02/04.jpg" alt="서울시여성가족재단" />
+  <figcaption>서울시여성가족재단</figcaption>
+</figure>
 
 주니어 개발자들을 대상으로 하는 발표였는데, 멘토링 때 했던 내용들을 주제로 잡으면 좋을 듯 하였다.
 제일 큰 고민이 무엇일까 했을 때 아마도 **잘 성장하는 방법**이 아닐까 하여, ‘문제를 잘 발견하고
 해결할 수 있는 개발자’라는 컨셉으로 주제를 잡아 발표를 진행하였다.
 
-<img src="/images/2024/02/03.jpg" alt="문제점을 발굴하는 개발자" />
+<figure>
+  <img src="/images/2024/02/03.jpg" alt="문제점을 발굴하는 개발자" />
+  <figcaption>문제점을 발굴하는 개발자</figcaption>
+</figure>
 
 현장 분위기도 너무 좋았고 참여자들의 열정 넘치는 분들의 눈빛들을 보며 발표를 진행하니 나도 오랜만에
 신나게 발표했던 것 같다. 도움이 많이 되었길 바라며 🙂
@@ -113,7 +125,10 @@ thumbnail: /images/2024/02/thumb_default.jpg
 시작하니 역시나 시간은 부족했지만, 그럼에도 마음의 여유가 생겨서 그런지 읽고 싶었던 책도 읽고, 책
 모임도 참여하면서 관심 분야 이외의 책도 읽어보았다.
 
-<img src="/images/2024/02/05.png" alt="골고루" />
+<figure>
+  <img src="/images/2024/02/05.png" alt="골고루" />
+  <figcaption>골고루</figcaption>
+</figure>
 
 모든 책이 다 좋았지만, 특히나 좋았던 책은 ‘개발자 오늘도 마음 튼튼하게 성장하기’와 ‘zero to
 one’이라는 책이다. 완독을 어려워하는 이유는 시간을 투자하며 독서를 하니, 이 책의 내용들을 꼼꼼히
