--- a/content/posts/ux-fitts-law.mdx
+++ b/content/posts/ux-fitts-law.mdx
@@ -163,7 +163,10 @@ thumbnail: /images/2021/02/thumb_default.jpg
   <img src="/images/2021/02/01.png" style={{width: "200px", marginTop:"10px"}} />- D : 대상 중심까지의
   거리 → 신호 signal - W : 대상의 허용 오차 혹은 너비 → 잡음 noise
 
-<img src="/images/2021/02/Fitts_Law.svg" alt="출처: wikipidia" />
+<figure>
+  <img src="/images/2021/02/Fitts_Law.svg" alt="출처: wikipidia" />
+  <figcaption>출처: wikipidia</figcaption>
+</figure>
 
 
 
@@ -401,43 +404,52 @@ $width: $height !default;
 ### Touch Target
 
 1. (Material design) Radio
-   <img
-     src="/images/2021/02/10.png"
-     style={{marginTop:"10px"}}
-     alt="Material design의 Radio - 라디오 버튼은 48px보다 작지만, touch영역은 48px을 유지"
-   />
+  <figure>
+    <img src="/images/2021/02/10.png"
+      style={{marginTop:"10px"}}
+      alt="Material design의 Radio - 라디오 버튼은 48px보다 작지만, touch영역은 48px을 유지" />
+    <figcaption>Material design의 Radio - 라디오 버튼은 48px보다 작지만, touch영역은 48px을 유지</figcaption>
+  </figure>
 1. (Material design) Slider
-   <img
-     src="/images/2021/02/11.png"
+  <figure>
+  <img src="/images/2021/02/11.png"
      style={{marginTop:"10px"}}
-     alt="Material design의 Slider - 슬라이더의 pointer부분의 높이값을 48px을 유지"
-   />
+     alt="Material design의 Slider - 슬라이더의 pointer부분의 높이값을 48px을 유지" />
+  <figcaption>Material design의 Slider - 슬라이더의 pointer부분의 높이값을 48px을 유지</figcaption>
+</figure>
 1. (Material design) Switch
-   <img src="/images/2021/02/12.png" style={{marginTop:"10px"}} alt="Material design의 Switch" />
+  <figure>
+  <img src="/images/2021/02/12.png" style={{marginTop:"10px"}} alt="Material design의 Switch" />
+  <figcaption>Material design의 Switch</figcaption>
+</figure>
 1. (Facebook) Button
-   <img
-     src="/images/2021/02/02.png"
+  <figure>
+  <img src="/images/2021/02/02.png"
      style={{marginTop:"10px"}}
-     alt="Facebook의 Button - 버튼의 높이 영역을 50px로 유지"
-   />
+     alt="Facebook의 Button - 버튼의 높이 영역을 50px로 유지" />
+  <figcaption>Facebook의 Button - 버튼의 높이 영역을 50px로 유지</figcaption>
+</figure>
 1. (Facebook) Button - icon
-   <img
-     src="/images/2021/02/04.png"
+  <figure>
+  <img src="/images/2021/02/04.png"
      style={{marginTop:"10px"}}
-     alt="Facebook의 Button - 버튼의 터치영역을 44px로 유지"
-   />
+     alt="Facebook의 Button - 버튼의 터치영역을 44px로 유지" />
+  <figcaption>Facebook의 Button - 버튼의 터치영역을 44px로 유지</figcaption>
+</figure>
 1. (Airbnb) Input
-   <img
-     src="/images/2021/02/07.png"
+  <figure>
+  <img src="/images/2021/02/07.png"
      style={{marginTop:"10px"}}
-     alt="Airbnb의 Button - input의 터치영역을 44px로 유지"
-   />
+     alt="Airbnb의 Button - input의 터치영역을 44px로 유지" />
+  <figcaption>Airbnb의 Button - input의 터치영역을 44px로 유지</figcaption>
+</figure>
 1. (토스) Button - fullfilled
-   <img
-     src="/images/2021/02/05.png"
+  <figure>
+  <img src="/images/2021/02/05.png"
      style={{marginTop:"10px"}}
-     alt="Toss의 Button - 버튼의 터치영역을 58px로 유지 (wow)"
-   />
+     alt="Toss의 Button - 버튼의 터치영역을 58px로 유지 (wow)" />
+  <figcaption>Toss의 Button - 버튼의 터치영역을 58px로 유지 (wow)</figcaption>
+</figure>
 
 
 
@@ -445,17 +457,19 @@ $width: $height !default;
 ### Space
 
 1. (Material design) Dialog
-   <img
-     src="/images/2021/02/09.png"
+  <figure>
+  <img src="/images/2021/02/09.png"
      style={{marginTop:"10px"}}
-     alt="Material design의 Button 컴포넌트들 여백"
-   />
+     alt="Material design의 Button 컴포넌트들 여백" />
+  <figcaption>Material design의 Button 컴포넌트들 여백</figcaption>
+</figure>
 1. (Material design) Chips
-   <img
-     src="/images/2021/02/14.png"
+  <figure>
+  <img src="/images/2021/02/14.png"
      style={{marginTop:"10px"}}
-     alt="Material design의 Chips 컴포넌트들 여백"
-   />
+     alt="Material design의 Chips 컴포넌트들 여백" />
+  <figcaption>Material design의 Chips 컴포넌트들 여백</figcaption>
+</figure>
 
 ---
 
