--- a/content/posts/Communication_003.mdx
+++ b/content/posts/Communication_003.mdx
@@ -138,7 +138,10 @@ thumbnail: /images/2020/09/thumb_default.jpg
   따라 모델이 더 나아진다는 것을 의미
   - 대부분의 경향성 모델은 예측을 위해 사용하기 전에 짧은 훈련기간과 검증 기간을 필요로 한다.
 
-<img src="/images/2020/08/response models.png" alt="경향성 모델의 훈련" />
+<figure>
+  <img src="/images/2020/08/response models.png" alt="경향성 모델의 훈련" />
+  <figcaption>경향성 모델의 훈련</figcaption>
+</figure>
 
 ### 경향성 십분위를 사용하는 법 `deciles`
 
@@ -294,7 +297,10 @@ thumbnail: /images/2020/09/thumb_default.jpg
 
 ## 데이터의 수집, 클랜징, 정비 preparation
 
-<img src="/images/2020/09/process.jpg" alt="예측분석 프로세스 개요" />
+<figure>
+  <img src="/images/2020/09/process.jpg" alt="예측분석 프로세스 개요" />
+  <figcaption>예측분석 프로세스 개요</figcaption>
+</figure>
 
 - 수집된 모든 데이터를 즉시 사용할 수 있는 것은 아니다.
 - 누락된 데이터 또는 아웃라이어로 인해서 결과가 왜곡될 수 있고 (지나치게 높거나 낮은 데이터)
