--- a/content/posts/JS_25_2.mdx
+++ b/content/posts/JS_25_2.mdx
@@ -10,35 +10,7 @@ categories:
   - 01_Web
   - zz. Workshop
 enableComment: true
-customList: |-
-  [
-    {
-      "title": {
-        "name": "Program",
-        "id": "program"
-      }
-    },
-    {
-      "hr": {
-        "type": "start",
-        "name": " Runtime 동안.."
-      }
-    },
-    {
-      "title": {
-        "name": "Runtime",
-        "sub": "런타임에 대해 (Von Neumann machine, JavaScript runtime)",
-        "id": "runtime",
-        "style": {
-          "type": "number",
-          "index": "1"
-        }
-      }
-    },
-    {
-      "title": {
-        "name": "State Control",
-        "sub": "[상태관리] 직접참조와 간접참조",
+직접참조와 간접참조",
         "id": "stateControl",
         "style": {
           "type": "number",
