--- a/content/posts/2025-reflection.mdx
+++ b/content/posts/2025-reflection.mdx
@@ -2,20 +2,20 @@
 title: 2025년 회고 - 육아휴직을 갭이어로
 date: '2025-12-31'
 description: >-
-  2025년을 회고합니다.
+ 2025년을 회고합니다.
 author: Joy Kim
 tags:
-  - Reflection
+ - Reflection
 categories:
-  - "Personal 🙆"
-  - "Reflection"
+ - "Personal 🙆"
+ - "Reflection"
 enableComment: true
 
 ---
 
 2025년은 정말 말 그대로 자기주도적인 해였다. (자기주도적일수밖에 없기도했지만;) 많은 것을 배웠고, 많은 것을 느꼈고 만족스러운 한해였다. 
 
-## Timeline
+## 육아휴직 Timeline
 1. 육아휴직: 2024년 7월 시작
 2. 출산: 2024년 7월말
 3. 6개월시점: 2025년 2월
@@ -25,11 +25,11 @@ enableComment: true
 
 현재 아기는 17개월
 
-## 업무스킬이 육아에도 녹아들었다.
-육아를 하면서 의외로 자주 들었던 생각이 있다. 
-> “이 감각, 일할 때 쓰던 거랑 비슷한데?”
+## 익숙했던 역량을 다른 맥락에서 다시 보다
+육아를 하면서 문득 익숙한 감각을 자주 느꼈다. 완전히 새로운 능력이 생겼다기보다는, 그동안 일하면서 자연스럽게 써오던 사고방식들이 다른 환경에서 그대로 작동하고 있다는 느낌에 가까웠다.
 
-육아는 예상 밖의 변수와 즉각적인 대응을 요구하는 일이 많다. 그 과정에서 내가 개발자로 일하며 자연스럽게 훈련해온 사고방식들이 여러 순간에 그대로 사용되고 있다는 걸 자주 인지하게 되었다.
+육아는 예상 밖의 변수와 즉각적인 대응을 요구하는 일이 많다. 그 과정에서 내가 개발자로 일하며 훈련해온 판단 방식들이 여러 순간에 그대로 사용되고 있다는 걸 점점 더 또렷하게 인식하게 되었다.
+
 
 ### 문제를 파악하고 정의하는 감각
 개발자는 단순히 요청사항을 구현하는 역할에 그치지 않는다. 복잡한 상황을 관찰하고, 패턴을 찾고, 무엇이 문제인지 정의한 뒤 해결 방향을 정하는 과정을 반복한다.
@@ -45,11 +45,91 @@ enableComment: true
 온콜 업무처럼, 개발자에게도 갑작스러운 상황은 익숙하다. 문제가 발생하면 원인을 파악하고 가능한 해결책을 빠르게 좁혀야 한다. 육아 역시 비슷했다. 상황을 오래 붙잡고 고민하기보다 지금 가능한 최선의 판단을 하고 움직여야 하는 순간들이 많았다. 이 능력은 육아를 하며 새로 생긴 스킬이라기보다는, 이미 가지고 있던 판단 방식이 더 자주, 더 극단적인 상황에서 사용되며 내 스스로에게도 인식된 것에 가까웠다.
 
 이 외에도 업무에 필요한 여러 스킬들이 있겠지만, 육아를 하며 특히 이 세 가지가 강하게 떠올랐다.
-육아를 하지 않았어도 이 사고방식들은 분명 나에게 도움이 되었을 것이다. 다만 육아라는 극단적인 상황에 놓이니 그동안 암묵적으로 사용하던 스킬들이 의식적으로 드러났고, 내가 어떤 방식으로 문제를 대하고 판단해왔는지를 처음으로 또렷하게 자각하게 되었다. 
-
+육아를 하지 않았어도 이 사고방식들은 분명 나에게 도움이 되었을 것이다. **다만 육아라는 극단적인 상황에 놓이니 그동안 암묵적으로 사용하던 스킬들이 의식적으로 드러났고, 내가 어떤 방식으로 문제를 대하고 판단해왔는지를 처음으로 또렷하게 자각하게 되었다.**
 이 경험은 이후 육아휴직 이후의 복귀를 생각할 때도 ‘완전히 멀어졌을 것’이라는 막연한 불안 대신 ‘사고방식은 여전히 유지되고 있다’는 감각을 가질 수 있게 해주었다.
 
-## -
-매일발생되는 변수만 해결하는 상황이 지속되다보니 하루하루가 같은 하루를 보내는 느낌이 들었다. 로드맵없이 순간대응만 하는 것이다. 날짜 감각도 사라졌고, 오늘 하루 해낸 해결들은 다음날이면 휘발되었다. 
-그러던 중 링크드인을 통해 우연히 알게된 히든타임 프로그램에 참여했다. 육아맘들의 시간관리 워크샵이였는데 이 작은 모음이 나의 생각과 행동의 전환을 만들어준 계기가 되었다. 이때부터 적지만 나를 위한 input, output시간으로 나누어서 가시화했고, 이 시각화된 통계를 기준으로 일주일간 나의 시간이 확보되지 않는다면 주변에 도움을 요청해서라도 나의 시간을 확보했다.
-이때부터 나에게 절대적으로 필요한것은 1. 건강유지, 2. 세상과 만나기, 3.나를 만나기 였다. 이와관련된건 [여기](https://brunch.co.kr/@feel5ny/29) 글에 남겨져있다.
+### 보이지 않던 역량의 쓰임을 자각하다
+
+
+돌이켜보면 눈에 잘 띄지 않는 일들을 많이 해왔다. 문제가 커지기 전에 정리하고, 흐름이 어긋나지 않게 조율하고, 당연하게 돌아가야 할 것들이 문제없이 돌아가도록 만드는 일들. 이런 능력들은 의식적으로 훈련했다기보다는 업무를 하며 무의식적으로 몸에 밴 기본기에 가까웠다.
+회사에서는 크게 드러나지도, 특별히 평가받지도 않았지만 많은 책임감과 에너지를 요구하는 역량들이었다.
+
+육아휴직을 하며 나는 처음으로 이 능력들의 쓰임을 또렷하게 느꼈다. 아무도 대신해주지 않는 상황 속에서 계속 판단하고 조정해야 하는 육아의 시간은
+**그동안 내가 훈련해온 사고방식이 나를 지탱하고 있음을 보여주었다.** 이건 누군가에게 인정받는 보상은 아니었지만, ~적어도 나 스스로에게는 처음으로 해준 제대로 된 피드백이었다.~ 그래서 이 고된 시간을 버틸 수 있었던 이유를 이제는 분명하게 말할 수 있다.
+
+## 삶을 운영하는 감각이 생기다
+
+### 삶을 다시 운영하기 시작하다
+
+육아의 세계에서는 매일 발생하는 변수들을 처리하는 데에만 에너지를 쓰다 보니 하루하루가 비슷한 하루처럼 느껴졌다. 로드맵 없이 순간 대응만 반복하는 상태였고, 날짜 감각도 흐려진 채 하루의 성취는 금세 휘발되었다.
+
+그러던 중 링크드인을 통해 우연히 알게 된 육아맘 대상 시간관리 워크숍에 참여하게 되었다. 이 작은 계기를 통해 나는 아주 작게라도 나를 위한 시간을 `input`과 `output`으로 나누어 기록하고 가시화하기 시작했다. **그리고 일주일 단위로 나의 시간이 전혀 확보되지 않는 상황이 반복되면, 주변에 도움을 요청해서라도 의도적으로 나의 시간을 만들었다.**
+
+그 시간 안에서 나에게 꼭 필요했던 것은 세 가지였다. 
+1️⃣ 건강을 유지하는 시간 
+2️⃣ 세상과 다시 연결되는 시간 
+3️⃣ 나 자신을 돌아보는 시간 
+
+이 세 가지가 균형을 이룰 때에야 불필요한 리스크를 줄이며 앞으로 나아갈 수 있다는 감각이 생겼다.
+
+돌이켜보면 이런 시간은 회사를 다니고 있을 때도 분명 나에게 필요했지만, 강한 책임감과 반복되는 일상 속에서 항상 후순위로 밀려나 있던 것이었다. **육아휴직을 통해 나는 처음으로 나의 상태를 점검하고 삶을 한 단계 위에서 바라보는 메타인지의 시간을 갖게 되었다.**
+
+### 작지만 확실했던 변화들
+
+이 과정에서 자존감을 끌어올려 준 경험들도 있었다.
+
+1. 돌잔치 이전 한 달간의 다이어트.  
+나 스스로와 롱텀의 약속을 하고, 그것을 실제로 지켜낸 경험.
+
+2. 화재를 대비해 1년 전 준비해 두었던 소화기가  
+실제로 도움이 되었고, 그 순간 가족을 지킬 수 있었다는 감각.
+
+3. 동네 육아모임을 주도적으로 운영하며  
+사람들을 연결하고, 관계의 흐름을 만들어간 경험.
+
+이것들은 회사에서의 어떤 성과보다 나에게 더 큰 성취감으로 남았다. 누군가의 평가가 아니라 나 스스로에게 “정말 잘했다”고 말해줄 수 있었던 순간들이었고, 그때 처음으로 내 삶을 내가 운영하고 있다는 감각을 분명히 느낄 수 있었다.
+
+## 갭이어에서 실제로 남은 것들
+
+앞의 이야기들이 갭이어 동안 내가 어떤 상태로 시간을 통과했는지에 대한 기록이었다면, 이 섹션은 그 시간 속에서 결과적으로 남은 것들을 짧게 정리한 것이다. 의도적으로 성취를 만들기보다는, 나를 유지하기 위해 선택했던 것들이 자연스럽게 결과로 남았다.
+
+- **세상과 연결되는 시간**
+  - action: 돈의 흐름과 시장을 이해하기 위해 신문 읽기와 주식 수업에 꾸준히 참여했다.
+  - result: 3개월 이상 지속하며 시장 흐름에 대한 연속성이 생겼고, 숫자와 뉴스를 해석하는 기준이 이전보다 명확해졌다. 질문의 밀도 또한 1년 전보다 달라졌음을 체감했다.
+
+- **개발**
+  - action: 멘토링 참여, 강의 제작, 그리고 복직.
+  - result: 기술 자체보다 사람과 맥락을 함께 바라보는 시야가 넓어졌다. 개발을 둘러싼 역할과 책임을 다시 생각해보는 계기가 되었다.
+
+- **육아**
+  - action: 새로운 환경에서 우리 가족에게 찾아온 존재를 건강하게 돌보는 데 집중했다.
+  - result: 아기를 건강하게 키웠고, 과소비 없이 생활을 유지했다. 남는 시간에는 나를 위한 루틴을 설계하고 조정하며, 삶을 ‘운영한다’는 감각을 가장 현실적으로 배웠다.
+
+- **개인 OKR**
+  - action: 분기 단위로 개인 OKR을 설정하고 점검했다.
+  - result: 약 70%의 달성률을 유지했다. 영어 공부 루틴을 지속했고, 운전면허 취득과 다이어트, 내 시간 확보를 실제 행동으로 옮길 수 있었다.
+
+<img src="https://img1.daumcdn.net/thumb/R1280x0.fpng/?fname=https://t1.daumcdn.net/brunch/service/user/KlY/image/czRAGQPE1ze0pa3Y4nW193UKE1U.png" alt="복직전 계획"/>
+
+## 앞으로의 방향
+
+하나의 영역에 머무르기보다, 서로 다른 영역의 경계에서 만나는 지점들을 연결하며 작은 실험을 반복해보려 한다. 옵시디언을 중심으로 생각을 쌓고, 항상 나만의 로드맵을 세워두는 방식으로 나아갈 생각이다.
+
+- **Stop**
+  - 순간 대응만 하며 하루를 소모하는 방식
+  - 완벽주의로 스스로를 압박하는 태도
+  - 혼자 감당하려다 결국 무너지는 패턴
+
+- **Continue**
+  - 기록하고 가시화하기
+  - 도움 요청을 ‘예외’가 아니라 ‘시스템’으로 두기
+  - 건강, 세상, 나를 만나는 시간을 기본값으로 유지하기
+
+- **Start**
+  - 나의 시간을 주간 단위로 먼저 확보하고 그 안에서 목표를 세우기
+  - 작은 약속을 지키며 자기 신뢰를 쌓기
+  - 육아는 3개월·6개월 단위로 로드맵을 미리 계획하기
+
+## 참고링크
+- [필오육아 brunch](https://brunch.co.kr/magazine/feel5ny-baby)
+- [필오유가 blog](https://blog.naver.com/like853https://blog.naver.com/PostList.naver?blogId=like853&categoryNo=108&from=postList&parentCategoryNo=108)
