이미지 추가

--- a/content/posts/2025-reflection.mdx
+++ b/content/posts/2025-reflection.mdx
@@ -10,6 +10,7 @@ categories:
  - "Personal 🙆"
  - "Reflection"
 enableComment: true
+thumbnail: /images/2025/04/thumb_default.jpg
 
 ---
 
@@ -25,31 +26,35 @@ enableComment: true
 
 현재 아기는 17개월
 
-## 익숙했던 역량을 다른 맥락에서 다시 보다
+## 1. 익숙했던 역량을 다른 맥락에서 다시 보다
 육아를 하면서 문득 익숙한 감각을 자주 느꼈다. 완전히 새로운 능력이 생겼다기보다는, 그동안 일하면서 자연스럽게 써오던 사고방식들이 다른 환경에서 그대로 작동하고 있다는 느낌에 가까웠다.
 
 육아는 예상 밖의 변수와 즉각적인 대응을 요구하는 일이 많다. 그 과정에서 내가 개발자로 일하며 훈련해온 판단 방식들이 여러 순간에 그대로 사용되고 있다는 걸 점점 더 또렷하게 인식하게 되었다.
 
+<figure>
+  <img src="https://cdn.prod.website-files.com/634681057b887c6f4830fae2/6712a1f30797b645d0f05c7c_6367dd602529d1720e34d27c_62ba355e69e8d422e1bed822_Context%252520Switching%252520(1).png" alt="context switching" />
+  <figcaption>[출처](https://www.getclockwise.com/blog/context-switching)</figcaption>
+</figure>
 
-### 문제를 파악하고 정의하는 감각
+### 1-1. 문제를 파악하고 정의하는 감각
 개발자는 단순히 요청사항을 구현하는 역할에 그치지 않는다. 복잡한 상황을 관찰하고, 패턴을 찾고, 무엇이 문제인지 정의한 뒤 해결 방향을 정하는 과정을 반복한다.
 육아에서도 비슷했다. 아이가 울거나 컨디션이 나빠질 때, 무작정 반응하기보다는 지금 상황을 관찰하고 ‘**지금 이 아이에게 문제가 되는 게 뭘까**’를 먼저 생각하게 되었다.
 이 과정은 누가 가르쳐준 적도 없고, 육아를 시작하면서 새로 배운 것도 아니었다. 돌아보면 업무를 하며 몸에 밴 사고 흐름이 육아라는 상황에서 더 선명하게 드러난 것에 가까웠다.
 
-### 잦은 업무 스위칭에 익숙했던 경험
+### 1-2. 잦은 업무 스위칭에 익숙했던 경험
 개발자는 개발만 하지 않는다.일정 조율, 커뮤니케이션, 우선순위 판단, 리뷰와 이슈 대응 등 끊임없이 맥락을 전환하며 일한다. 그래서 기본적으로 업무 스위칭 비용이 높은 직군이다.
 육아는 그보다 더 잦은 스위칭을 요구한다. 아기의 상태, 집안일, 외부 일정, 예상치 못한 변수들이 하루에도 수십 번씩 맥락을 바꾼다.
 이때 ‘지금 해야 할 것’을 빠르게 구분하고 완벽하지 않더라도 다음 선택으로 넘어가는 감각이 업무에서 단련된 것임을 깨닫게 되었다.
 
-### 즉각적인 상황판단
+
+### 1-3. 즉각적인 상황판단
 온콜 업무처럼, 개발자에게도 갑작스러운 상황은 익숙하다. 문제가 발생하면 원인을 파악하고 가능한 해결책을 빠르게 좁혀야 한다. 육아 역시 비슷했다. 상황을 오래 붙잡고 고민하기보다 지금 가능한 최선의 판단을 하고 움직여야 하는 순간들이 많았다. 이 능력은 육아를 하며 새로 생긴 스킬이라기보다는, 이미 가지고 있던 판단 방식이 더 자주, 더 극단적인 상황에서 사용되며 내 스스로에게도 인식된 것에 가까웠다.
 
 이 외에도 업무에 필요한 여러 스킬들이 있겠지만, 육아를 하며 특히 이 세 가지가 강하게 떠올랐다.
 육아를 하지 않았어도 이 사고방식들은 분명 나에게 도움이 되었을 것이다. **다만 육아라는 극단적인 상황에 놓이니 그동안 암묵적으로 사용하던 스킬들이 의식적으로 드러났고, 내가 어떤 방식으로 문제를 대하고 판단해왔는지를 처음으로 또렷하게 자각하게 되었다.**
 이 경험은 이후 육아휴직 이후의 복귀를 생각할 때도 ‘완전히 멀어졌을 것’이라는 막연한 불안 대신 ‘사고방식은 여전히 유지되고 있다’는 감각을 가질 수 있게 해주었다.
 
-### 보이지 않던 역량의 쓰임을 자각하다
-
+### 1-4. 보이지 않던 역량의 쓰임을 자각하다
 
 돌이켜보면 눈에 잘 띄지 않는 일들을 많이 해왔다. 문제가 커지기 전에 정리하고, 흐름이 어긋나지 않게 조율하고, 당연하게 돌아가야 할 것들이 문제없이 돌아가도록 만드는 일들. 이런 능력들은 의식적으로 훈련했다기보다는 업무를 하며 무의식적으로 몸에 밴 기본기에 가까웠다.
 회사에서는 크게 드러나지도, 특별히 평가받지도 않았지만 많은 책임감과 에너지를 요구하는 역량들이었다.
@@ -57,9 +62,14 @@ enableComment: true
 육아휴직을 하며 나는 처음으로 이 능력들의 쓰임을 또렷하게 느꼈다. 아무도 대신해주지 않는 상황 속에서 계속 판단하고 조정해야 하는 육아의 시간은
 **그동안 내가 훈련해온 사고방식이 나를 지탱하고 있음을 보여주었다.** 이건 누군가에게 인정받는 보상은 아니었지만, ~적어도 나 스스로에게는 처음으로 해준 제대로 된 피드백이었다.~ 그래서 이 고된 시간을 버틸 수 있었던 이유를 이제는 분명하게 말할 수 있다.
 
-## 삶을 운영하는 감각이 생기다
+## 2. 삶을 운영하는 감각이 생기다
 
-### 삶을 다시 운영하기 시작하다
+<figure>
+  <img src="https://www.talentlms.com/blog/wp-content/uploads/2025/12/Self-Directed-Learning_29January2025_Big.png" alt="self-directed
+"/>
+  <figcaption>[출처](https://www.talentlms.com/blog/power-self-directed-learning-workplace/)</figcaption>
+</figure>
+### 2-1. 삶을 다시 운영하기 시작하다
 
 육아의 세계에서는 매일 발생하는 변수들을 처리하는 데에만 에너지를 쓰다 보니 하루하루가 비슷한 하루처럼 느껴졌다. 로드맵 없이 순간 대응만 반복하는 상태였고, 날짜 감각도 흐려진 채 하루의 성취는 금세 휘발되었다.
 
@@ -74,7 +84,8 @@ enableComment: true
 
 돌이켜보면 이런 시간은 회사를 다니고 있을 때도 분명 나에게 필요했지만, 강한 책임감과 반복되는 일상 속에서 항상 후순위로 밀려나 있던 것이었다. **육아휴직을 통해 나는 처음으로 나의 상태를 점검하고 삶을 한 단계 위에서 바라보는 메타인지의 시간을 갖게 되었다.**
 
-### 작지만 확실했던 변화들
+
+### 2-2. 작지만 확실했던 변화들
 
 이 과정에서 자존감을 끌어올려 준 경험들도 있었다.
 
@@ -89,8 +100,11 @@ enableComment: true
 
 이것들은 회사에서의 어떤 성과보다 나에게 더 큰 성취감으로 남았다. 누군가의 평가가 아니라 나 스스로에게 “정말 잘했다”고 말해줄 수 있었던 순간들이었고, 그때 처음으로 내 삶을 내가 운영하고 있다는 감각을 분명히 느낄 수 있었다.
 
-## 갭이어에서 실제로 남은 것들
-
+## 3. 갭이어에서 실제로 남은 것들
+<figure>
+  <img src="https://images.ctfassets.net/pdf29us7flmy/4cSB4QTQcXLlqcad2EE2LH/901dce9a516db3ea100ea24d64795451/resized.png?w=1440&q=100&fm=avif" alt="gap year"/>
+  <figcaption>[출처](https://www.indeed.com/career-advice/career-development/gap-year-after-high-school)</figcaption>
+</figure>
 앞의 이야기들이 갭이어 동안 내가 어떤 상태로 시간을 통과했는지에 대한 기록이었다면, 이 섹션은 그 시간 속에서 결과적으로 남은 것들을 짧게 정리한 것이다. 의도적으로 성취를 만들기보다는, 나를 유지하기 위해 선택했던 것들이 자연스럽게 결과로 남았다.
 
 - **세상과 연결되는 시간**
@@ -109,9 +123,12 @@ enableComment: true
   - action: 분기 단위로 개인 OKR을 설정하고 점검했다.
   - result: 약 70%의 달성률을 유지했다. 영어 공부 루틴을 지속했고, 운전면허 취득과 다이어트, 내 시간 확보를 실제 행동으로 옮길 수 있었다.
 
-<img src="https://img1.daumcdn.net/thumb/R1280x0.fpng/?fname=https://t1.daumcdn.net/brunch/service/user/KlY/image/czRAGQPE1ze0pa3Y4nW193UKE1U.png" alt="복직전 계획"/>
+<figure>
+  <img src="https://img1.daumcdn.net/thumb/R1280x0.fpng/?fname=https://t1.daumcdn.net/brunch/service/user/KlY/image/czRAGQPE1ze0pa3Y4nW193UKE1U.png" alt="복직전 계획"/>
+  <figcaption>복직전 계획</figcaption>
+</figure>
 
-## 앞으로의 방향
+## 4. 앞으로의 방향
 
 하나의 영역에 머무르기보다, 서로 다른 영역의 경계에서 만나는 지점들을 연결하며 작은 실험을 반복해보려 한다. 옵시디언을 중심으로 생각을 쌓고, 항상 나만의 로드맵을 세워두는 방식으로 나아갈 생각이다.
 
